@@ -2,5 +2,6 @@
 
 return [
     'cancel'  => 'Cancel',
+    'filter'  => 'Filter',
     'search'  => 'Search',
 ];
