@@ -1,0 +1,6 @@
+<?php
+
+return [
+    'shows'  => 'Shows',
+    'from'  => 'from',
+];
