@@ -3,6 +3,7 @@ Version 0.6.1 -
 - New: added possibility to specify whether column is sortable or not by 'sortable'=>true
 - Fix: in rendering sortable columns
 - Fix: in showing translation strings
+- Fix: translation in all view files
 
 
 Version 0.6.0 - Jan 9, 2021
